fix pictures. add border to first

--- a/notebooks/auto_eval.ipynb
+++ b/notebooks/auto_eval.ipynb
@@ -679,13 +679,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f2d72a11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        Aivar\n",
+      "1      Martina\n",
+      "2       Silvia\n",
+      "3      Mohamed\n",
+      "4       Aitana\n",
+      "5       Kawtar\n",
+      "6        Lucia\n",
+      "7         Liam\n",
+      "8          Pau\n",
+      "9         Fina\n",
+      "10      Nasser\n",
+      "11        Hugo\n",
+      "12        Gala\n",
+      "13       Diego\n",
+      "14        Alan\n",
+      "15       Nisio\n",
+      "16      Matteo\n",
+      "17        Lina\n",
+      "18       Clara\n",
+      "19        Joel\n",
+      "20    Valentin\n",
+      "21     Violeta\n",
+      "22        Alex\n",
+      "23     Melyssa\n",
+      "24     Gabriel\n",
+      "Name: Estudiant, dtype: str\n"
+     ]
+    }
+   ],
    "source": [
     "# Quick preview of the first 5 rows\n",
-    "preview(df)"
+    "print(df['Estudiant'])"
    ]
   },
   {
